# moolmesh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PHILOSOPHY.md  README.es.md  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: index.html
hub/: __init__.py  __main__.py  backfill.py  batch_reporter.py  cli.py  colors.py  config.py  daemon.py  discovery.py  git_utils.py  log.py  mcp_server.py
hub/adapters/: base.py  claude_adapter.py  codex_adapter.py  cursor_adapter.py  opencode_adapter.py  qwen_adapter.py
hub/analyzers/: __init__.py  base.py  cross_provider.py  efficiency.py  file_ops.py  qa.py  session_timeline.py  summary.py  user_messages.py
hub/cache/: event_store.py  git_store.py
hub/correlation/: __init__.py  linker.py
hub/dashboard/: server.py
hub/dashboard/static/: analytics.html  dashboard.html  projects.html  timeline.html
hub/digests/: __init__.py  engine.py  llm.py  stats.py  template.py
hub/harvesters/: __init__.py  git_harvester.py  github_harvester.py
hub/integrations/: __init__.py  github_client.py  ollama_client.py  openai_compat_client.py
hub/models/: __init__.py  base.py  claude.py  codex.py  cursor.py  opencode.py  qwen.py
hub/parsers/: base.py  claude_parser.py  codex_parser.py  cursor_parser.py  opencode_parser.py  qwen_parser.py
hub/renderers/: __init__.py  markdown.py
hub/watchers/: __init__.py  base.py  claude_watcher.py  codex_watcher.py  cursor_watcher.py  kqueue_watcher.py  opencode_watcher.py  polling_watcher.py  qwen_watcher.py
tests/: conftest.py  test_analyzer_cross_provider.py  test_analyzer_session_timeline.py  test_analyzer_user_messages.py  test_backfill.py  test_batch_reporter.py  test_claude_adapter.py  test_claude_parser.py  test_cli_repo_sync.py  test_codex_adapter.py  test_codex_parser.py  test_config.py  test_correlation.py  test_cursor_adapter.py  test_cursor_discovery.py  test_cursor_models.py  test_cursor_parser.py  test_cursor_server_registration.py  test_cursor_watcher.py  test_digest_engine.py  test_digest_stats.py  test_digest_template.py  test_discovery.py  test_event_store.py  test_foundation.py  test_full_text.py  test_git_harvester.py  test_git_store.py  test_github_client.py  test_github_harvester.py  test_harvester.py  test_llm_factory.py  test_logging.py  test_mcp_server.py  test_mcp_setup.py  test_models.py  test_ollama_client.py  test_openai_compat_client.py  test_opencode_adapter.py  test_opencode_discovery.py  (+12 more)
tests/fixtures/: claude_sample.jsonl  codex_sample.jsonl  qwen_sample.jsonl
