[project]
name = "moolmesh"
version = "1.4.0"
description = "The context mesh for autonomous agents — unified observability, telemetry, and inter-agent coordination"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []
keywords = ["ai", "agents", "observability", "telemetry", "mcp", "claude", "codex", "opencode", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/fmicalizzi/moolmesh"
Repository = "https://github.com/fmicalizzi/moolmesh"
Issues = "https://github.com/fmicalizzi/moolmesh/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
mool = "hub.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
